# src/main/resources/static/docs/openapi.yml
@@ -188,6 +188,10 @@ components:
       $ref: "./components/schemas/blockedTime/BlockedTimeConfirmResponseDto.yml"
     BlockedTimeDetailResponseDto:
       $ref: "./components/schemas/blockedTime/BlockedTimeDetailResponseDto.yml"
+    BlockedTimeUpdateRequestDto:
+      $ref: "./components/schemas/blockedTime/BlockedTimeUpdateRequestDto.yml"
+    ListOfBlockedTimeDetailResponseDto:
+      $ref: "./components/schemas/blockedTime/ListOfBlockedTimeDetailResponseDto.yml"
     ReservationDetailResponseDto:
       $ref: "./components/schemas/reservation/ReservationDetailResponseDto.yml"
 
@@ -320,6 +324,8 @@ paths:
     $ref: "./paths/admin/schedule/blockedTime/PreviewBlockedTimeConflicts.yml"
   /api/admin/blocked-times/confirm:
     $ref: "./paths/admin/schedule/blockedTime/ConfirmBlockedTime.yml"
+  /api/admin/blocked-times/{blockedTimeId}:
+    $ref: "./paths/admin/schedule/blockedTime/BlockedTimeById.yml"
 
   /api/public/modalities:
     $ref: "./paths/modality/GetAllModalities.yml"
